fix(webgl-media-editor): make cropper inaccessible when not in view

--- a/packages/webgl-media-editor/src/css/layout.css
+++ b/packages/webgl-media-editor/src/css/layout.css
@@ -40,9 +40,14 @@
     position: fixed !important;
     z-index: -1;
     display: block !important;
+    visibility: hidden !important;
     overflow: hidden !important;
     pointer-events: none !important;
     opacity: 0 !important;
+
+    * {
+      visibility: hidden !important;
+    }
   }
 }
 
